Prevent .angular-squire-wrapper's z-index on protonmail.ch from stealing focus.

--- a/common/ui/inline/framestyles.css
+++ b/common/ui/inline/framestyles.css
@@ -81,6 +81,7 @@
   white-space: nowrap;
   font-size: 0;
   display: none;
+  z-index: 11;
 }
 
 :root .m-encrypt-frame-expanded {
